<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.kappa.app.main.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.kappa.app.main.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.kappa.app.main.SignupFragment"
        android:label="@string/title_signup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/navigation_onboarding_country"
        android:name="com.kappa.app.main.OnboardingCountryFragment"
        android:label="@string/title_onboarding_country"
        tools:layout="@layout/fragment_onboarding_country" />

    <fragment
        android:id="@+id/navigation_onboarding_profile"
        android:name="com.kappa.app.main.OnboardingProfileFragment"
        android:label="@string/title_onboarding_profile"
        tools:layout="@layout/fragment_onboarding_profile" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.kappa.app.main.HomeFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.kappa.app.audio.presentation.RoomsFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kappa.app.main.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.kappa.app.main.WalletFragment"
        android:label="Wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_recharge"
        android:name="com.kappa.app.main.RechargeFragment"
        android:label="Recharge"
        tools:layout="@layout/fragment_recharge" />

    <fragment
        android:id="@+id/navigation_backpack"
        android:name="com.kappa.app.main.BackpackFragment"
        android:label="Backpack"
        tools:layout="@layout/fragment_backpack" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kappa.app.main.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_vip"
        android:name="com.kappa.app.main.VipFragment"
        android:label="VIP"
        tools:layout="@layout/fragment_vip" />

    <fragment
        android:id="@+id/navigation_star_path"
        android:name="com.kappa.app.main.StarPathFragment"
        android:label="Star Path"
        tools:layout="@layout/fragment_star_path" />

    <fragment
        android:id="@+id/navigation_admin_dashboard"
        android:name="com.kappa.app.main.AdminDashboardFragment"
        android:label="Admin"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/navigation_agency_tools"
        android:name="com.kappa.app.main.AgencyToolsFragment"
        android:label="Agency"
        tools:layout="@layout/fragment_agency_tools" />

    <fragment
        android:id="@+id/navigation_reseller_tools"
        android:name="com.kappa.app.main.ResellerToolsFragment"
        android:label="Reseller"
        tools:layout="@layout/fragment_reseller_tools" />

    <fragment
        android:id="@+id/navigation_room_detail"
        android:name="com.kappa.app.audio.presentation.RoomDetailFragment"
        android:label="@string/title_rooms"
        tools:layout="@layout/fragment_room_detail" />

    <fragment
        android:id="@+id/navigation_game_hub"
        android:name="com.kappa.app.game.presentation.GameHubFragment"
        android:label="Mini Games"
        tools:layout="@layout/fragment_game_hub" />

    <fragment
        android:id="@+id/navigation_game_detail"
        android:name="com.kappa.app.game.presentation.GameDetailFragment"
        android:label="Game"
        tools:layout="@layout/fragment_game_detail" />

</navigation>
